fixed z-index of map

--- a/src/index.css
+++ b/src/index.css
@@ -307,6 +307,7 @@ table.table-content tfoot td {
   justify-content: center;
   align-items: center;
   margin-bottom: 20px;
+  z-index: 0;
 }
 
 .Marker-tip {
